tests/build/cases/widget_new/missing_semi2.stderr
error: expected `;`
  --> cases/widget_new/missing_semi2.rs:14:9
   |
14 |         enabled = true;
   |         ^^^^^^^
